--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.yixun.mediaplayer.MainActivity">
 
     <!--中间内容-FrameLayout-->
     <FrameLayout
         android:id="@+id/fl_mainc_content"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
 
-</android.support.constraint.ConstraintLayout>
+    <RadioGroup
+        android:id="@+id/rg_main"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="#11000000"
+        android:orientation="horizontal"
+        android:padding="5dp">
+
+        <RadioButton
+            android:id="@+id/rb_local_video"
+            style="@style/bottom_button_style"
+            android:drawableTop="@mipmap/ic_launcher"
+            android:text="本地视频" />
+
+        <RadioButton
+            android:id="@+id/rb_local_audio"
+            style="@style/bottom_button_style"
+            android:drawableTop="@mipmap/ic_launcher"
+            android:text="本地音频" />
+
+    </RadioGroup>
+
+</LinearLayout>
