--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -28,7 +28,17 @@
             <item name="android:taskToFrontExitAnimation">@null</item>
             <item name="android:taskToBackEnterAnimation">@null</item>
             <item name="android:taskToBackExitAnimation">@null</item>
+    </style>
 
+    <style name="bottom_button_style" >
+        <item name="android:layout_weight">1</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:button">@null</item>
+        <item name="android:gravity">center</item>
+        <item name="android:drawablePadding">5dp</item>
+        <item name="android:textColor">@drawable/rb_textcolor_selector</item>
+        <item name="android:textSize">10sp</item>
     </style>
 
 </resources>
