--- a/app/src/main/res/layout/item_local_video.xml
+++ b/app/src/main/res/layout/item_local_video.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
         android:layout_centerVertical="true"
-        android:src="@drawable/video_default_icon" />
+        android:src="@mipmap/ic_launcher" />
 
     <LinearLayout
         android:layout_width="wrap_content"
