更改了一些类名

--- a/app/src/main/res/layout/item_net_audio.xml
+++ b/app/src/main/res/layout/item_net_audio.xml
@@ -2,12 +2,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="5dp">
+    android:padding="5dp"
+    android:layout_margin="5dp">
 
-    <fm.jiecao.jcvideoplayer_lib.JCVideoPlayerStandard
-        android:id="@+id/jcv_videoplayer"
+    <com.yixun.videoplayer.YXVideoPlayerStandard
+        android:id="@+id/videoplayer"
         android:layout_width="match_parent"
-        android:layout_height="220dp"
-        android:orientation="vertical" />
+        android:layout_height="200dp" />
 
 </RelativeLayout>
