--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,7 +33,7 @@
             android:id="@+id/rb_local_audio"
             style="@style/bottom_button_style"
             android:drawableTop="@mipmap/ic_launcher"
-            android:text="本地音频" />
+            android:text="网络视频" />
 
     </RadioGroup>
 
