--- a/app/src/main/res/layout/item_net_audio.xml
+++ b/app/src/main/res/layout/item_net_audio.xml
@@ -1,13 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="5dp"
     android:layout_margin="5dp">
 
-    <com.yixun.videoplayer.YXVideoPlayerStandard
-        android:id="@+id/videoplayer"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-</RelativeLayout>
+        <com.yixun.videoplayer.YXVideoPlayerStandard
+            android:id="@+id/videoplayer"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_marginBottom="5dp"/>
+
+        <include
+            layout="@layout/common_bottom"/>
+    </LinearLayout>
+
+
+</android.support.v7.widget.CardView>
